# tlac

./: .gitignore  CMakeLists.txt  Makefile  README.md  flake.nix
example/: CMakeLists.txt  TVOperators.tla  TWoPhaseSimple.tla  TraceSpec.tla  specTrace.cfg
src/clock/: CMakeLists.txt  client_clock.c  client_clock.h  clock.h  clock_exception.c  clock_exception.h  clock_factory.c  clock_factory.h  file_clock.c  file_clock.h  local_clock.c  local_clock.h  memory_clock.c  memory_clock.h  server_clock.c
src/helper/: CMakeLists.txt  configuration_manager.c  configuration_manager.h  ndjson_serializer.c  ndjson_serializer.h
src/trace/: CMakeLists.txt  tla_tracer.c  tla_tracer.h  trace_item.c  trace_item.h  virtual_field.c  virtual_field.h
src/usage/: CMakeLists.txt  test_client_clock.c
template/: spec.tla  specTrace.tla
tools/: tla_trace_validation.py  trace_merger.py
